--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "sass-loader": "^9.0.2",
     "vue": "^2.6.11",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.3.4",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.3.5",
